# structures_algorithms_laboratories_3

./: Makefile  README.md  pyproject.toml
samples/: graph.txt
structures_algorithms_laboratories_3/: __main__.py
structures_algorithms_laboratories_3/algorithms/: __init__.py  bellman_shortest_path.py
structures_algorithms_laboratories_3/utils/: __init__.py  utils.py
structures_algorithms_laboratories_3/widgets/: __init__.py  image_viewer.py  main_window.py
